// Copyright 2023 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package recipe_modules.recipe_engine.time.examples.jitter;

message JitterProps {
  float random_output = 1;
  int32 expected_outcome = 2;
}
